# Terraform_infra

./: .gitignore
Task-1- VPC Infra/: .terraform.lock.hcl  main.tf  outputs.tf  providers.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
Task-2 ECR/: README.md
Task-2 ECR/Terraform/: docker_push.tf  main.tf  outputs.tf  variables.tf
Task-2 ECR/services/classification/: README.md
Task-2 ECR/services/fairness/: requirements.txt
Task-2 ECR/services/mainflow/: Dockerfile
Task-2 ECR/services/what_if/: .dockerignore
Task-2 ECR/shared_migrations/models/: data_drift.py  tenant.py
Task-3 ECR/: .pre-commit-config.yaml  pyproject.toml
Task-3 ECR/Terraform/: .terraform.lock.hcl  docker_push.tf  providers.tf  variables.tf
Task-3 ECR/nginx/: default.conf
Task-3 ECR/services/API/: README.md  alembic.ini  requirements.txt
Task-3 ECR/services/API/app/core/: config.py
Task-3 ECR/services/API/app/routers/: addrole.py  download_files.py  file_upload.py  project_list.py  upload_files_from_db.py  upload_from_presignedurl.py  users.py
Task-3 ECR/services/API/tests/: Authentication System Design.csv
Task-3 ECR/services/classification/: Dockerfile  pytest.ini  requirements.txt
Task-3 ECR/services/classification/app/: logging_config.py
Task-3 ECR/services/classification/app/core/: analysis_service.py  dependence_service.py  interaction_service.py  model_service.py
Task-3 ECR/services/classification/app/logic/: datahandler.py  s3handler.py
Task-3 ECR/services/classification/app/routers/: dataset_comparision.py  explain_with_ai.py  feature_interactions.py  get_roc_analysis.py  individual_prediction.py  interaction_network.py  list_files.py  pairwise_analysis.py
Task-3 ECR/services/classification/tests/: test_get_roc_analysis.py  test_individual_prediction.py  test_list_files.py  test_pairwise_analysis.py  test_post_roc_analysis.py  test_threshold_analysis.py
Task-3 ECR/services/data_drift/: Dockerfile  requirements.txt
Task-3 ECR/services/data_drift/app/core/: config.py
Task-3 ECR/services/data_drift/app/models/: __init__.py
Task-3 ECR/services/data_drift/app/new/: test_class_imbalance.py
Task-3 ECR/services/data_drift/app/new/src/data_drift/routes/: dashboard_new.py  feature_analysis.py  statistical.py
Task-3 ECR/services/data_drift/app/new/src/data_drift/services/: multi_cohort_drift_service.py
Task-3 ECR/services/data_drift/app/new/src/model_drift/routes/: __init__.py
Task-3 ECR/services/data_drift/app/new/src/model_drift/services/advanced/: __init__.py  psi_service.py
Task-3 ECR/services/data_drift/app/new/src/model_drift/services/analysis/: sanity_check_service.py  statistical_significance_service.py
Task-3 ECR/services/data_drift/app/new/src/shared/: upload.py
Task-3 ECR/services/data_drift/app/routers/: columns.py  llm_full_report.py
Task-3 ECR/services/fairness/: README.md
Task-3 ECR/services/fairness/app/src/: config.py  feature_interaction_generator.py  mitigation_strategies.py  pipeline_optimizer.py
Task-3 ECR/services/fairness/app/src/api/: bias.py  mitigation.py
Task-3 ECR/services/fairness/app/utils/: helper_functions.py
Task-3 ECR/services/mainflow/: SECURITY.md
Task-3 ECR/services/mainflow/app/core/: explainability_logic.py
Task-3 ECR/services/mainflow/app/routers/: explainability_analysis.py  fairness_files.py  fairness_metrics.py  fairness_thresholds.py
Task-3 ECR/services/mainflow/app/schemas/: explainability.py
Task-3 ECR/services/regression/: Dockerfile  README.md
Task-3 ECR/services/regression/app/core/: ai_explanation_service.py  prediction_service.py  tree_service.py
Task-3 ECR/services/regression/app/schemas/: regression_schema.py
Task-3 ECR/services/regression/app/utils/: feature_type_detector.py
Task-3 ECR/services/what_if/: README.md  requirements.txt
Task-3 ECR/services/what_if/app/routers/: metadata.py  predict.py  session_refresh.py
Task-3 ECR/services/what_if/app/schema/: session_s3.py
Task-3 ECR/shared/: auth.py
Task-3 ECR/shared_migrations/: alembic.ini  seed_roles_permissions.py
Task-3 ECR/shared_migrations/alembic/versions/: 0426d12ed15c_discover_table_creation.py  05dbe3a7bc6c_discover_table_tag_column_altered.py  117f08b52dca_file_storage_yable_updated.py  4a10ea7b8d91_discover_table_creation_safe_migration.py  52d7593061e4_index_added.py  59e186ed94a3_remove_tag_from_discover.py  63a6c534b9fb_alembic_password_management.py  6f3656245d68_initial_migration_after_cleanup.py  7ba4d8e240f1_mobile_datatype_changed.py  a80826a928cc_discover_table_new.py
Task-3 ECR/shared_migrations/models/: __init__.py  analysis_result.py  audit_log.py  file_storage.py  role_permission.py
Task_1_VPC Infra/: RESOURCES.md  main.tf  variables.tf
Task_2_VMs_with_BastionHost/: RESOURCES.md  data.tf  instances.tf  key_pair.tf  locals.tf  outputs.tf  providers.tf  security_groups.tf  variables.tf  vpc.tf
Task_3_ECR/: RESOURCES.md  docker-compose.yml
Task_3_ECR/.github/: dependabot.yml
Task_3_ECR/Terraform/: docker_push.tf  main.tf  outputs.tf  variables.tf
Task_3_ECR/nginx/: Dockerfile
Task_3_ECR/services/: .gitignore
Task_3_ECR/services/classification/: .gitignore  requirements-dev.txt
Task_3_ECR/services/gateway/: Dockerfile
Task_3_ECR/services/regression/: pyproject.toml
Task_3_ECR/services/regression/app/: logging_config.py  main.py
Task_3_ECR/services/regression/app/core/: classification_service.py
Task_3_ECR/services/regression/app/utils/: analysisid.py
Task_3_ECR/services/what_if/: requirements-dev.txt
Task_3_ECR/shared_migrations/alembic/: env.py
Task_3_ECR_ECS_LoadBalancer/Terraform/: docker_push.tf  outputs.tf  providers.tf  variables.tf
Task_3_ECR_ECS_LoadBalancer/scripts/: bootstrap.py
Task_3_ECR_ECS_LoadBalancer/services/API/: Dockerfile
Task_3_ECR_ECS_LoadBalancer/services/fairness/: .dockerignore  Dockerfile
Task_3_ECR_ECS_LoadBalancer/shared/: user_roles_and_permission_access.py
Task_4_S3_RDS/: .gitignore  RESOURCE.md  ec2.tf  outputs.tf  providers.tf  rds.tf  s3.tf  security_groups.tf  ssh_key.tf  variables.tf  vpc.tf
(+199 files in other folders)
