[project]
name = "ra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types>=0.7.0",
    "ansi2html>=1.9.2",
    "anyio>=4.9.0",
    "appdirs>=1.4.4",
    "asttokens>=3.0.0",
    "async-timeout>=5.0.1",
    "blinker>=1.9.0",
    "cachetools>=5.5.2",
    "certifi>=2025.7.14",
    "cffi>=1.17.1",
    "charset-normalizer>=3.4.2",
    "click>=8.2.1",
    "cloudpickle>=3.1.1",
    "colorama>=0.4.6",
    "colour>=0.1.5",
    "comm>=0.2.2",
    "contourpy>=1.3.2",
    "cryptography>=45.0.5",
    "cycler>=0.12.1",
    "dash>=3.1.1",
    "dash-auth>=2.3.0",
    "dash-bootstrap-components>=2.0.3",
    "dash-core-components>=2.0.0",
    "dash-html-components>=2.0.0",
    "dash-table>=5.0.0",
    "debugpy>=1.8.14",
    "decorator>=5.2.1",
    "deprecation>=2.1.0",
    "distro>=1.9.0",
    "dtreeviz>=2.2.2",
    "dynaconf>=3.2.11",
    "evidently>=0.7.10",
    "exceptiongroup>=1.3.0",
    "executing>=2.2.0",
    "explainerdashboard>=0.4.8",
    "faker>=37.4.0",
    "fastapi>=0.116.1",
    "filelock>=3.18.0",
    "filetype>=1.2.0",
    "flask>=3.1.1",
    "flask-simplelogin>=0.2.0",
    "flask-wtf>=1.2.2",
    "fonttools>=4.58.5",
    "fsspec>=2025.5.1",
    "google-ai-generativelanguage>=0.6.18",
    "google-api-core>=2.25.1",
    "google-auth>=2.40.3",
    "googleapis-common-protos>=1.70.0",
    "graphviz>=0.21",
    "greenlet>=3.2.3",
    "grpcio>=1.73.1",
    "grpcio-status>=1.73.1",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httptools>=0.6.4",
    "httpx>=0.28.1",
    "idna>=3.10",
    "importlib-metadata>=8.7.0",
    "iniconfig>=2.1.0",
    "ipykernel>=6.29.5",
    "ipython>=9.4.0",
    "iterative-telemetry>=0.0.10",
    "itsdangerous>=2.2.0",
    "jedi>=0.19.2",
    "jinja2>=3.1.6",
    "joblib>=1.5.1",
    "jsonpatch>=1.33",
    "jsonpointer>=3.0.0",
    "jupyter-client>=8.6.3",
    "jupyter-core>=5.8.1",
    "jupyter-dash>=0.4.2",
    "kiwisolver>=1.4.8",
    "langchain>=0.3.26",
    "langchain-core>=0.3.68",
    "langchain-google-genai>=2.1.7",
    "langchain-text-splitters>=0.3.8",
    "langsmith>=0.4.5",
    "litestar>=2.16.0",
    "litestar-htmx>=0.5.0",
    "llvmlite>=0.44.0",
    "markdown-it-py>=3.0.0",
    "markupsafe>=3.0.2",
    "matplotlib>=3.10.3",
    "matplotlib-inline>=0.1.7",
    "mdurl>=0.1.2",
    "msgspec>=0.19.0",
    "multidict>=6.6.3",
    "multipart>=1.2.1",
    "mypy-extensions>=1.1.0",
    "narwhals>=1.46.0",
    "nest-asyncio>=1.6.0",
    "nltk>=3.9.1",
    "numba>=0.61.2",
    "numpy>=1.26.4",
    "orjson>=3.10.18",
    "oyaml>=1.0",
    "packaging>=24.2",
    "pandas>=2.3.1",
    "parso>=0.8.4",
    "patsy>=1.0.1",
    "pillow>=11.3.0",
    "platformdirs>=4.3.8",
    "plotly>=5.24.1",
    "pluggy>=1.6.0",
    "polyfactory>=2.22.0",
    "prompt-toolkit>=3.0.51",
    "proto-plus>=1.26.1",
    "protobuf>=6.31.1",
    "psutil>=7.0.0",
    "pure-eval>=0.2.3",
    "pyarrow>=20.0.0",
    "pyasn1>=0.6.1",
    "pyasn1-modules>=0.4.2",
    "pycparser>=2.22",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "pygments>=2.19.2",
    "pyparsing>=3.2.3",
    "pytest>=8.4.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "pytz>=2025.2",
    "pywin32>=310",
    "pyyaml>=6.0.2",
    "pyzmq>=27.0.0",
    "regex>=2024.11.6",
    "requests>=2.32.4",
    "requests-toolbelt>=1.0.0",
    "retrying>=1.4.0",
    "rich>=14.0.0",
    "rich-click>=1.8.9",
    "rsa>=4.9.1",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "setuptools>=80.9.0",
    "shap>=0.48.0",
    "shellingham>=1.5.4",
    "six>=1.17.0",
    "slicer>=0.0.8",
    "sniffio>=1.3.1",
    "sqlalchemy>=2.0.41",
    "stack-data>=0.6.3",
    "starlette>=0.47.1",
    "statsmodels>=0.14.5",
    "tenacity>=9.1.2",
    "threadpoolctl>=3.6.0",
    "tomli>=2.2.1",
    "tornado>=6.5.1",
    "tqdm>=4.67.1",
    "traitlets>=5.14.3",
    "typer>=0.16.0",
    "typing-extensions>=4.14.1",
    "typing-inspect>=0.9.0",
    "typing-inspection>=0.4.1",
    "tzdata>=2025.2",
    "ujson>=5.10.0",
    "urllib3>=2.5.0",
    "uuid6>=2025.0.1",
    "uvicorn>=0.35.0",
    "waitress>=3.0.2",
    "watchdog>=6.0.0",
    "watchfiles>=1.1.0",
    "wcwidth>=0.2.13",
    "websockets>=15.0.1",
    "werkzeug>=3.1.3",
    "wtforms>=3.2.1",
    "zipp>=3.23.0",
    "zstandard>=0.23.0",
]
